--- a/authorization/static/register.css
+++ b/authorization/static/register.css
@@ -3,14 +3,6 @@ body {
   overflow: hidden;
 }
 
-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 55%;
-  height: 100%;
-}
-
 .form {
   position: absolute;
   width: 45%;
@@ -20,17 +12,42 @@ img {
   top: 0;
 }
 
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 55%;
+  height: 100%;
+}
+
 .form h1 {
   position: absolute;
-  left: 265px;
+  left: 32%;
   top: 10%;
   font-weight: normal;
   font-size: 40px;
 }
 
-.input-form {
+.input-form input {
+  padding: 15px;
+  width: 250px;
+  height: 15px;
+  background-color: #D9D9D9;
+}
+
+.input-form1 {
   text-align: center;
   margin-top: 200px;
+}
+
+.input-form2 {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.input-form3 {
+  text-align: center;
+  margin-top: 40px;
 }
 
 .input-form input[type="text"]::placeholder,
@@ -41,10 +58,25 @@ img {
   font-size: 14px;
 }
 
-.input-form input {
-  padding: 15px;
-  width: 250px;
-  height: 15px;
-  background-color: #D9D9D9;
+.form-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+a {
+  padding: 10px;
+  width: 285px;
+  height: 30px;
+  background-color: black;
+  border: none;
+  font-size: 20px;
+  font-weight: normal;
+  color: white;
+  margin-top: 30px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
