--- a/authorization/templates/register.html
+++ b/authorization/templates/register.html
@@ -6,30 +6,33 @@
     <link rel="stylesheet" href="{% static 'register.css' %}">
 </head>
 <body>
-        <img src="https://i.pinimg.com/564x/53/aa/c2/53aac2baa441d5434919580037a03635.jpg" alt="">
-        <div class = "form">
-            <form method="post">
-                {% csrf_token %}
-                <h1>Регистрация</h1>
-                <div class = "input-form">
-                    <input type="text" placeholder="Логин">
-                </div>
-                <div class = "input-form">
-                    <input type="email" placeholder="Email">
-                </div>
-                <div class = "input-form">
-                    <input type="password" placeholder="Пароль">
-                </div>
-                <div class = "input-form">
-                    <input type="submit" value="Зарегестрироваться">
-                </div>
-                <a href="#">Забыли пароль?</a>
-            </form>
-            <div class = "form-buttons">
-                <a href={% url "auth" %}>Войти</a>
-                <h3>или</h3>
-                <a href="#">Войти с помощью Google</a>
-            </div>
+    <img src="https://i.pinimg.com/564x/53/aa/c2/53aac2baa441d5434919580037a03635.jpg" alt="">
+    <div class="form">
+        <form method="POST" action="{% url 'register' %}">
+    {% csrf_token %}
+    <h1>Регистрация</h1>
+    <div class="input-form">
+        <div class="input-form1">
+            <input type="text" name="username" placeholder="Логин" required>
         </div>
+        <div class="input-form2">
+            <input type="email" name="email" placeholder="Email" required>
+        </div>
+        <div class="input-form3">
+            <input type="password" name="password" placeholder="Пароль" required>
+        </div>
+    </div>
+    <div class="form-buttons">
+        <button type="submit">Зарегистрироваться</button>
+    </div>
+</form>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
 </body>
 </html>
