--- a/authorization/static/register.css
+++ b/authorization/static/register.css
@@ -50,8 +50,20 @@ img {
   margin-top: 40px;
 }
 
+.input-form4 {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.input-form5 {
+  text-align: center;
+  margin-top: 40px;
+}
+
 .input-form input[type="text"]::placeholder,
 .input-form input[type="email"]::placeholder,
+.input-form input[type="text"]::placeholder,
+.input-form input[type="text"]::placeholder,
 .input-form input[type="password"]::placeholder {
   text-align: left;
   color: black;
@@ -66,6 +78,23 @@ img {
 
 a {
   padding: 10px;
+  width: 285px;
+  height: 30px;
+  background-color: black;
+  border: none;
+  font-size: 20px;
+  font-weight: normal;
+  color: white;
+  margin-top: 30px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-buttons button {
+  padding: 30px;
   width: 285px;
   height: 30px;
   background-color: black;
