--- a/semWork/templates/home.html
+++ b/semWork/templates/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-
 </html>
