--- a/authorization/static/auth.css
+++ b/authorization/static/auth.css
@@ -15,12 +15,13 @@ img {
   position: absolute;
   width: 45%;
   height: 100%;
-  background: #B8B6C5;
+  background: black;
   right: 0;
   top: 0;
 }
 
 .form h1 {
+  color: white;
   position: absolute;
   left: 32%;
   top: 10%;
@@ -42,7 +43,7 @@ img {
   padding: 15px;
   width: 250px;
   height: 15px;
-  background-color: #D9D9D9;
+  background-color: white;
 }
 
 .input-form input[type="text"]::placeholder,
@@ -63,11 +64,11 @@ img {
   padding: 15px;
   width: 285px;
   height: 40px;
-  background-color: black;
+  background-color: white;
   border: none;
-  font-size: 16px;
-  font-weight: normal;
-  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  color: black;
   margin-top: 30px;
   line-height: 0.2;
   text-align: center;
@@ -77,7 +78,7 @@ a {
   display: block;
   text-align: center;
   font-size: 16px;
-  color: #666;
+  color: white;
   margin-top: 20px;
   text-decoration: none;
 }
@@ -99,7 +100,7 @@ a:hover {
   border: none;
   border-radius: 20px;
   padding: 15px;
-  width: 285px;
+  width: 290px;
   height: 50px;
   font-size: 16px;
   font-weight: normal;
@@ -107,19 +108,19 @@ a:hover {
 }
 
 .google-btn {
-  background-color: #D9D9D9;
+  background-color: white;
   color: black;
 }
 
 .google-btn img {
-    width: 30px;
-    height: 40px;
+    width: 40px;
+    height: 50px;
     margin-top: 94%;
-    left: 30%;
+    left: 29%;
 }
 
 .register-btn {
-  background-color: #D9D9D9;
+  background-color: white;
 }
 
 h3 {
