--- a/authorization/static/edit_profile.css
+++ b/authorization/static/edit_profile.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
 body {
   margin: 0;
   overflow: hidden;
@@ -14,9 +12,9 @@ img {
 }
 
 .card {
-  width: 550px;
-  height: 380px;
-  margin: 150px 475px;
+  width: 450px;
+  height: 350px;
+  margin: 200px 500px;
   position: relative;
   background-color: white;
   display: flex;
@@ -25,26 +23,21 @@ img {
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
 }
 
-.card-fullname {
-  margin-top: -5px;
-  font-size: 40px;
+.card-header {
+  margin-top: 0;
+  font-size: 30px;
   text-align: center;
   font-family: 'Pacifico', serif;
 }
 
-.card-field-label {
-  font-weight: 700;
-  font-size: 20px;
-  margin-top: 16px;
-  margin-bottom: 8px;
-  margin-left: 10px;
-}
 
-.card-field-value {
-  font-size: 20px;
-  margin-bottom: 8px;
-  margin-left: 10px;
-  color: #808080;
+input[type=text],
+input[type=email]{
+  width:120%;
+  border-radius:10px;
+  padding:10px;
+  border:0;
+  box-shadow:0 0 10px 4px rgba(0,0,0,0.06);
 }
 
 .form-buttons {
@@ -63,11 +56,11 @@ img {
   height: 50px;
   font-size: 16px;
   font-weight: normal;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-right: 10px;
 }
 
-.back-btn, .edit-btn {
+.back-btn, .save-btn {
   background-color: #D9D9D9;
   color: black;
 }
