--- a/semWork/static/base.css
+++ b/semWork/static/base.css
@@ -17,20 +17,23 @@ body {
     font-family: 'Poppins', serif;
 }
 
+header {
+  width: 100%;
+  height: 100px;
+  background: white;
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  padding: 0 8%;
+  left: 0;
+  right: 0;
+  z-index: 999;
+}
+
 .wrapper{
     width: 90%;
     margin: 0 auto;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    background: #B8B6C5;
-    position: fixed;
-    top: 0;
-    display: flex;
-    align-items: center;
-    padding: 0 8%;
 }
 
 .logo{
@@ -47,6 +50,7 @@ header {
     color: #757575;
     letter-spacing: 4px;
 }
+
 
 header nav {
     width: 70%;
@@ -78,7 +82,7 @@ nav ul li ul {
     position: absolute;
     left: -15px;
     width: 150px;
-    background-color: #B8B6C5;
+    background-color: white;
     display: none;
     color: #757575;
 }
@@ -91,24 +95,15 @@ nav ul li ul li:first-child {
     border-top: none;
 }
 
-footer {
-    background-color: #B8B6C5;
-    padding: 2rem 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.content {
+  margin-top: 100px;
+  padding-top: 20px;
+  padding-bottom: 80px;
 }
 
-.footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-column {
-  width: calc((100% / 3) - 1rem);
+.box-area {
+  height: 100vh;
+  padding-top: 100px;
 }
 
 .center {
