--- a/semWork/templates/base.html
+++ b/semWork/templates/base.html
@@ -29,28 +29,10 @@
                 </nav>
             </div>
         </header>
-    </div>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-column left">
-                <h5 class="contacts">Контакты для связи</h5>
-                 <p><a href="mailto:karihairullina@gmail.com" title="glorythemes">karihairullina@gmail.com</a></p>
-            </div>
-            <div class="footer-column center">
-                 <h5 class="about">О нас</h5>
-                <p>Цель сайта - помочь людям освоить искусство гармоничного и стильного образа. Сайт предлагает удобный и простой способ организовать свой гардероб, создать уникальный образ и выглядеть на 100%</p>
-            </div>
-            <div class="footer-column right">
-                <h5 class="links">FAQ</h5>
-            <ul>
-                <li><a href="#">Помощь и поддержка</a></li>
-                <li><a href="#">Правила пользования</a></li>
-            </ul>
-            </div>
+        <div class="content">
+            {% block content %}
+            {% endblock %}
         </div>
-    </footer>
-{% block content %}
-{% endblock %}
-    </body>
+    </div>
+</body>
 </html>
