--- a/semWork/templates/home.html
+++ b/semWork/templates/home.html
@@ -1,8 +1,48 @@
-<!DOCTYPE html>
 {% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="{% static 'home.css' %}">
 </head>
+    <body>
+    <section class="first-section">
+        <div class="full-screen-image">
+            <h1>FashLook - сайт о стиле и красоте</h1>
+        </div>
+    </section>
+    <section class="second-section">
+        <div class="image-container">
+            <img src="https://i.pinimg.com/564x/7b/78/b0/7b78b072518888f1ce7ce95eab953d89.jpg" alt="First Image">
+            <img src="https://i.pinimg.com/736x/85/54/9c/85549ca22578dcdaa7608760133f45d0.jpg" alt="Second Image">
+        </div>
+        <div class="second-section-content">
+            <h2>Почему мы?</h2>
+            <p>Этот сайт может помочь вам перестать думать каждый день о том, что вы наденете. Здесь у вас всегда есть возможность не только составлять образы на каждый день, но и упорядочить свой гардероб и не хранить лишние вещи.</p>
+        </div>
+    </section>
+
+    </body>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-column left">
+                <h5 class="contacts">Контакты для связи</h5>
+                 <p><a href="mailto:karihairullina@gmail.com" title="glorythemes">karihairullina@gmail.com</a></p>
+            </div>
+            <div class="footer-column center">
+                 <h5 class="about">О нас</h5>
+                <p>Цель сайта - помочь людям освоить искусство гармоничного и стильного образа. Сайт предлагает удобный и простой способ организовать свой гардероб, создать уникальный образ и выглядеть на 100%</p>
+            </div>
+            <div class="footer-column right">
+                <h5 class="links">FAQ</h5>
+            <ul>
+                <li><a href="#">Помощь и поддержка</a></li>
+                <li><a href="#">Правила пользования</a></li>
+            </ul>
+            </div>
+        </div>
+    </footer>
 </html>
+{% endblock %}
