--- a/semWork/templates/base.html
+++ b/semWork/templates/base.html
@@ -15,10 +15,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Главная</a></li>
+                        <li><a href="{% url 'home' %}">Главная</a></li>
                         <li><a href="#">Гардероб</a>
                             <ul>
-                                <li><a href="#">Одежда</a></li>
+                                <li><a href="{% url 'all_clothes' %}">Одежда</a></li>
                                 <li><a href="#">Образы</a></li>
                             </ul>
                         </li>
