--- a/semWork/templates/home.html
+++ b/semWork/templates/home.html
@@ -10,12 +10,13 @@
     <body>
     <section class="first-section">
         <div class="full-screen-image">
-            <h1>FashLook - сайт о стиле и красоте</h1>
+            <h1>FashLook -<br> сайт о стиле и красоте</h1>
+            <img src="/media/96D115C0-CA10-4EEA-B6CE-1CDD7BD43B3B.jpeg" alt="Описание изображения">
         </div>
     </section>
     <section class="second-section">
         <div class="image-container">
-            <img src="https://i.pinimg.com/564x/7b/78/b0/7b78b072518888f1ce7ce95eab953d89.jpg" alt="First Image">
+            <img src="https://i.pinimg.com/564x/53/b5/7d/53b57d181a799801b79cab19c4a284db.jpg" alt="First Image">
             <img src="https://i.pinimg.com/736x/85/54/9c/85549ca22578dcdaa7608760133f45d0.jpg" alt="Second Image">
         </div>
         <div class="second-section-content">
